--- a/readme
+++ b/readme
@@ -9,4 +9,4 @@ git clone https://github.com/eltonlooi/EmpDB.git
 cd cloudcomputing-assignment
 yum install python-pip -y
 pip3 install flask pymysql boto3
-python3 EmpApp.py
+python3 main.py
